new code updated

--- a/src/app/ecommerce/ecommerce.component.html
+++ b/src/app/ecommerce/ecommerce.component.html
@@ -280,13 +280,14 @@
                           <thead>
                             <tr>
                               <th>S.NO</th>
-                              <td>Product</td>
-                              <td>Description</td>
-                              <td>Price</td>
-                              <td>Color</td>
-                              <td>Size</td>
-                              <td>Edit</td>
-                              <td>Delete</td>
+                              <th>Product</th>
+                              <th>Description</th>
+                              <th>Price</th>
+                              <th>Color</th>
+                              <th>Size</th>
+                              <th>Varient</th>
+                              <th>Edit</th>
+                              <th>Delete</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -305,6 +306,8 @@
                                     {{color.itemName}}
                                 </li>
                               </ul></td>
+
+                              <td>{{product.varient.varient}}</td>
 
                                 
                               
